# claude-express

./: .coverage  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-05-07-message-class-tests.md
docs/superpowers/specs/: 2026-05-06-message-class-design.md
src/claude_express/: __init__.py  caching.py  errors.py  message.py  responses.py
tests/: conftest.py  test_constants.py  test_construction.py  test_lifecycle.py  test_queues.py  test_responses.py  test_scalars.py  test_send.py  test_serialization.py
