[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-express"
version = "0.1.0"
description = "Async delivery agent for the Claude API with prompt-cache + batch optimization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_express"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
